--- a/processing/plugin/codemirror/solarized.css
+++ b/processing/plugin/codemirror/solarized.css
@@ -35,7 +35,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 }
 .cm-s-solarized.cm-s-dark {
   color: #839496;
-  background-color:  #002b36;
+  background-color:  #202020;
   text-shadow: #002b36 0 1px;
 }
 .cm-s-solarized.cm-s-light {
@@ -151,7 +151,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 
 /* Dark */
 .cm-s-solarized.cm-s-dark .CodeMirror-gutters {
-  background-color: #073642;
+  background-color: #2a2a2a;
   border-color: #00232c;
 }
 
@@ -167,7 +167,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 
 /* Common */
 .cm-s-solarized .CodeMirror-linenumber {
-  color: #586e75;
+  color: #666;
 }
 
 .cm-s-solarized .CodeMirror-gutter .CodeMirror-gutter-text {
